--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ body {
 .hidden {
     visibility: hidden;
 }
+.selected {
+    border-color: hsl(213, 96%, 18%) ;
+    background-color: hsl(231, 100%, 99%);
+}
+.selected .checkbox {
+    border-color: transparent ;
+    background-color: hsl(243, 100%, 62%);
+}
 #container {
     position: relative;
     background-color: hsl(217, 100%, 97%);
@@ -31,14 +39,6 @@ body {
     gap: 1.5rem;
     padding: 2rem;
 }
-/* .step {
-    border: 1px solid white;
-    border-radius: 50%;
-    padding: 0.4rem 0.6rem;
-    color: white;
-    font-weight: 700;
-    font-size: 0.9rem;
-} */
 .step-number {
     border: 1px solid white;
     border-radius: 50%;
@@ -81,7 +81,7 @@ p {
             color: hsl(213, 96%, 18%);
             margin-bottom: 0.4rem;
             font-size: 0.8rem;
-            font-weight: 500;
+            font-weight: 700;
         }
         form input {
             display: block;
@@ -301,4 +301,103 @@ p {
     #container {
         background-size: contain;
     }
+}@media (min-width:600px) {
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        font-size: 12px;
+        background-color: hsl(228, 100%, 84%);
+    }
+    #container {
+        min-height: auto;
+        width: 700px;
+        background-color: white;
+        background-image: none;
+        background-size: 30%;
+        text-align: left;
+        display: grid;
+        grid-template-columns: auto 66%;
+        grid-template-rows: 400px auto;
+        border-radius: 10px;
+        padding: 1rem;
+        gap: 0 2rem;
+    }
+    
+    #steps-navigation {
+        grid-column: 1/2;
+        grid-row: 1/3;
+        border-radius: 10px;
+        display: block;
+        padding: 2rem 1.5rem ;
+        width: 100%;
+        background-image: url(assets/images/bg-sidebar-desktop.svg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        
+    }
+    .step {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        margin-bottom: 1.5rem;
+    }
+    .step-details {
+        display: block;
+        text-transform: uppercase;
+        font-weight: 700;
+    }
+    .step-number {
+        margin-right: 0.7rem;
+    }
+    .step-details h4 {
+        color: hsl(231, 11%, 63%);
+        margin-bottom: 0rem;
+        font-size: 0.7;
+    }
+    .step-details h3 {
+        color: white;
+        font-size: 0.8rem;
+    }
+    .content {
+        padding: 1rem 2rem;
+        grid-column: 2/3;
+        grid-row: 1/2;
+        max-height: 100%;
+        width: 100%;
+    }
+    #step-buttons {
+        top: 0;
+        position: static;
+        grid-column: 2/3;
+        grid-row: 2/3;
+        padding: 0rem 2rem 0.5rem;
+        width: auto;
+    }
+
+
+
+    #thank-you {
+        padding-top: 5rem;
+    }
+
+    #plan-selection {
+        display: flex;
+        justify-content: center;
+        align-items: stretch;
+        gap: 1rem;
+        margin-top: 1.5rem;
+    }
+    .plan {
+        flex-grow: 1;
+        display: block
+    }
+    .icon{
+        margin: 0 0 2rem 0;
+    }
+    .icon img {
+        width: 50%;
+    }
 }
+
